navidrome/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: navidrome
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome-deployment
  namespace: navidrome
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      containers:
        - name: navidrome
          image: ghcr.io/navidrome/navidrome:0.60.0
          ports:
            - containerPort: 4533
          volumeMounts:
            - name: data
              mountPath: /data
            - name: music
              mountPath: /music
              readOnly: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: navidrome-data-pvc
        - name: music
          persistentVolumeClaim:
            claimName: navidrome-music-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome-service
  namespace: navidrome
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: 4533
      port: 4533
      protocol: TCP
  selector:
    app: navidrome
