navidrome/virtualservice.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: navidrome
  namespace: navidrome
spec:
  hosts:
    - navidrome.lag0.com.br
  gateways:
    - istio-system/lag0-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: navidrome-service
            port:
              number: 4533
